Tracer rewrite + EntityManager + misc fixes